# makeitdown

./: .gitignore  README.md  pyproject.toml  给你的AI助手.md
.github/workflows/: release.yml
docs/: 2026-06-18-field-validation-plan.md  reference-projects-learnings-2026-06-18.md
docs/superpowers/specs/: 2026-06-15-legacy-doc-wps-support-design.md  2026-06-15-quality-warnings-design.md  2026-06-18-llm-heading-structure-design.md  2026-06-18-next-steps-revision-plan.md
scripts/: build_agent_bundle.py
skill/makeitdown/: SKILL.md
src/makeitdown/: cli.py  convert_legacy.py  convert_native.py  convert_ocr.py  frontmatter.py  models.py  ocr_cloud.py  ocr_local.py  pipeline.py  quality.py  router.py  structure.py
tests/: test_cli.py  test_convert_legacy.py  test_convert_native.py  test_convert_ocr.py  test_frontmatter.py  test_models.py  test_ocr_cloud.py  test_ocr_local.py  test_pipeline.py  test_quality.py  test_router.py  test_structure.py
